fix-product-review